# OmniCell-CPT-Brain

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/vocab/: Vocabulary.json
checkpoints/: README.md
configs/: ad_interpretability_config.json  vascular_marker_sets.json
data/: README.md
docs/: ad_informed_probe_results.md  bi_ad_interpretability_plan.md  bi_multicell_ad_model_summary.md  code_index.md  data_and_checkpoint_layout.md  figure3_revision_v19.md  release_notes.md
evaluation/ad_readout/: analyze_ad_cpt_interpretability.py  build_ad_cpt_anchors.py  evaluate_external_gse138852_ad_modules.py  evaluate_external_gse263468_czi_cpt_vs_raw.py  make_cpt_vs_raw_svd_figures.py  make_figure4_sc_spatial_cpt_raw_only.py  make_figure4_supplementary_statistics.py  run_multicell_integrated_ad_model.py
evaluation/atlas/: audit_figure1_representation_candidate_transforms.py  build_vascular_index.py  (+5 more)
figures/: README.md
omnicell_hf/: __init__.py  api.py  configuration_omnicell.py  data.py  legacy.py  modeling_omnicell.py  processing_omnicell.py
outputs/: README.md
results/: README.md
scripts/: convert_legacy_checkpoint.py  embed_h5ad.py  train_h5ad.py  train_memmap_pretrain.py
training/: embed_figure1_validation_cpt_nonzero_hvg.py  prepare_figure1_agebalanced_training_anchors.py  run_figure1_checkpoint_pareto_selection.py  run_figure1_multitask_finetune_agebalanced_long.sh  run_figure1_multitask_finetune_agebalanced_smoke.sh  run_figure1_multitask_finetune_full.sh  run_figure1_multitask_finetune_smoke.sh  train_memmap_multitask_alignment.py
(+29 files in other folders)
