[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicell-cpt-brain"
version = "0.1.0"
description = "OmniCell-CPT-Brain continual pretraining and downstream brain evaluation code"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "transformers",
  "safetensors",
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "anndata",
  "matplotlib",
  "tqdm",
]

[tool.setuptools.packages.find]
include = ["omnicell_hf*"]
